fix overflow text event section

--- a/Project/oman-biodiversity.com/web/css/main.css
+++ b/Project/oman-biodiversity.com/web/css/main.css
@@ -44,8 +44,6 @@ body, html {
     font-size: 1em;
     padding: 7px 20px;
 }
-
-
 /*--------------------------------------------------------*/
 /* -------------- header & navigation --------------*/
 /*--------------------------------------------------------*/
@@ -125,6 +123,7 @@ nav ul li a {
 .event-image {
     width:  400px; 
     height: 287px;
+    position: relative;
 }
 /*--------------------------------------------------------*/
 /* -------------- Calendar-Container -------------- */
